<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:layout_marginBottom="9.0dip"
    android:layout_marginLeft="8.0dip"
    android:layout_marginRight="8.0dip"
    android:layout_marginTop="0.0dip"
    android:paddingBottom="5.0dip"
    android:paddingLeft="6.0dip"
    android:paddingRight="6.0dip"
    android:paddingTop="5.0dip" >

    <TableRow>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:padding="5.0dip"
            android:text="@string/location_ttff_txt"
            android:textColor="@color/text_title"
            android:textSize="14.0sp" />

        <TextView
            android:id="@+id/location_ttff"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:padding="5.0dip"
            android:text="@string/location_ttff_val"
            android:textColor="@color/text_data"
            android:textSize="14.0sp" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:padding="5.0dip"
            android:text="@string/location_acc_txt"
            android:textColor="@color/text_title"
            android:textSize="14.0sp" />

        <TextView
            android:id="@+id/location_acc"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:padding="5.0dip"
            android:text="@string/location_acc_val"
            android:textColor="@color/text_data"
            android:textSize="14.0sp" />
    </TableRow>

    <TableRow>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:padding="5.0dip"
            android:text="@string/location_lon_txt"
            android:textColor="@color/text_title"
            android:textSize="14.0sp" />

        <TextView
            android:id="@+id/location_lon"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:padding="5.0dip"
            android:text="@string/location_lon_val"
            android:textColor="@color/text_data"
            android:textSize="14.0sp" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:padding="5.0dip"
            android:text="@string/location_lat_txt"
            android:textColor="@color/text_title"
            android:textSize="14.0sp" />

        <TextView
            android:id="@+id/location_lat"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:padding="5.0dip"
            android:text="@string/location_lat_val"
            android:textColor="@color/text_data"
            android:textSize="14.0sp" />
    </TableRow>

    <TableRow>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:padding="5.0dip"
            android:text="@string/location_alt_txt"
            android:textColor="@color/text_title"
            android:textSize="14.0sp" />

        <TextView
            android:id="@+id/location_alt"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:padding="5.0dip"
            android:text="@string/location_alt_val"
            android:textColor="@color/text_data"
            android:textSize="14.0sp" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:padding="5.0dip"
            android:text="@string/location_speed_txt"
            android:textColor="@color/text_title"
            android:textSize="14.0sp" />

        <TextView
            android:id="@+id/location_speed"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:padding="5.0dip"
            android:text="@string/location_speed_val"
            android:textColor="@color/text_data"
            android:textSize="14.0sp" />
    </TableRow>

    <TableRow>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:padding="5.0dip"
            android:text="@string/location_time_txt"
            android:textColor="@color/text_title"
            android:textSize="14.0sp" />

        <TextView
            android:id="@+id/location_time"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:padding="5.0dip"
            android:text="@string/location_time_val"
            android:textColor="@color/text_data"
            android:textSize="14.0sp" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:padding="5.0dip"
            android:text="@string/location_date_txt"
            android:textColor="@color/text_title"
            android:textSize="14.0sp" />

        <TextView
            android:id="@+id/location_date"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:padding="5.0dip"
            android:text="@string/location_date_val"
            android:textColor="@color/text_data"
            android:textSize="14.0sp" />
    </TableRow>
    
</TableLayout>
